<resources>
    <string name="app_name">GoodGists</string>

    <!--Main Menu Items-->
    <string name="menu_search">Search</string>
    <string name="menu_gist">My Gists</string>
    <string name="menu_star">Starred</string>
    <string name="menu_account">Account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <!--End Main Menu Items-->

    <!--Search Strings-->
    <string name="search_title">Search Gists</string>
    <string name="search_hint_gist">Gist name</string>
    <string name="search_hint_language">Language type</string>
    <string name="search_hint_user">Author</string>
    <string name="options">Options</string>
    <string name="search_user">User</string>
    <string name="search_gist">Gist</string>
    <string name="search_language">Language</string>
    <!--End Search Strings-->

    <!--My Gists Strings-->
    <string name="my_gists">My Gists</string>
    <!--End My Gists-->

    <!--Font Awesome-->
    <string name="fa_search">&#xf002;</string>
    <string name="fa_file_text_o">&#xf0f6;</string>
    <string name="fa_star">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_sign_in">&#xf090;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_github">&#xf09b;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <!--End FontAwesome-->

    <!--Dialog-->
    <string name="searching">Searching...</string>
    <string name="cancel">Cancel</string>
    <string name="noUser">No username or email.
        Please enter a correct username or email</string>
    <string name="noPassword">No password.
        Please enter your user password.</string>
    <string name="cannotConnect">Cannot connect to service. Please try again,
        or if the problem persists,
        create an issue at https://github.com/GoodGoodies/goodGists.</string>
    <string name="createOAuthToken">Do you want to create an OAuth token that has access to:
        \n- Gists\n- Notifications\n- Public Repositories\n- Users\n- User Followers
    </string>
    <string name="didNotCreateOAuthToken">You chose not to create an OAuth Token. You will have
        to sign into the service again after closing the application.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <!--End Dialog-->

    <string name="unstarred">Unstarred</string>
    <string name="starred">Starred</string>

    <!--Login-->
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <!--End Login-->

    <!--Logout-->
    <string name="logout_explained">You need to enter your password to confirm deletion of your OAuth token</string>
    <!--End Logout-->

    <!--File-->
    <string name="oauthkeyfile">oauthkey</string>
    <!--End File-->

    <!--Toasts-->
    <string name="logged_in_toast">You are logged into GitHub with your OAuth Token</string>
    <string name="logged_out_toast">You are logged out</string>
    <!--End Toasts-->
</resources>
