<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.srepollock.goodgists.LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:ems="10"
            android:id="@+id/usernameLogin"
            android:hint="@string/username"
            android:layout_marginTop="102dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_below="@+id/usernameLogin"
            android:layout_alignStart="@+id/usernameLogin"
            android:textSize="24sp" />

        <Button
            android:text="@string/menu_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginLoginButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginTop="78dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:onClick="loginToGitHub" />
    </RelativeLayout>
</RelativeLayout>
