<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_logout_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.srepollock.goodgists.LogoutScreen">

    <TextView
        android:text="@string/logout_explained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:id="@+id/logoutText"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/gitHubUsername"
        android:layout_above="@+id/gitHubPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/githubLogout"
        android:elevation="0dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/menu_logout"
        android:textAlignment="viewStart"
        android:layout_below="@+id/gitHubPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:onClick="logoutButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/gitHubPassword"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/gitHubUsername"
        android:hint="@string/password" />

</RelativeLayout>
